--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.2.0",
     "daisyui": "^4.12.23",
-    "eslint": "^9",
+    "eslint": "^9.20.1",
     "eslint-config-next": "15.1.6",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react": "^7.37.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
